--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,6 +7,27 @@
     0%, 100% { opacity: 1; }
     50% { opacity: 0; }
 }
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+}
+ 
+/* Track */
+::-webkit-scrollbar-track {
+    background: #888;
+    border-radius: 5px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #868181;
+    border-radius: 5px;
+}
+ 
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
 
 .animate-blink {
     animation: blink 1s step-start 0s infinite;
